packages/typ/tests/fixtures/diagnostics/0064_core_annotated_value_mismatch_06.ml.expected
File "0064_core_annotated_value_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0064_core_annotated_value_mismatch_06 is not a valid module name.

File "0064_core_annotated_value_mismatch_06.ml", line 1, characters 18-19:
1 | let zeta : bool = 0
                      ^
Error: The constant 0 has type int but an expression was expected of type
         bool
