packages/typ/tests/fixtures/diagnostics/0064_core_annotated_value_mismatch_06.ml
let zeta : bool = 0
